node-affinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-express
  labels:
    app: hello-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-express
  template:
    metadata:
      labels:
        app: hello-express
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: In
                values:
                - linux
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: node-type
                operator: In
                values:
                - production
      tolerations:
      - key: "app"
        operator: "Equal"
        value: "critical"
        effect: "NoSchedule"
      containers:
      - name: hello-express
        image: deepaknash/hello-docker:assessment1
        ports:
        - containerPort: 8080
