deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-express
  labels:
    app: hello-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-express
  template:
    metadata:
      labels:
        app: hello-express
    spec:
      containers:
      - name: hello-express
        image: deepaknash/hello-docker:assessment1
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: hello-express-service
spec:
  selector:
    app: hello-express
  ports:
  - port: 80
    targetPort: 8080
  type: NodePort
