loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-express-lb
spec:
  selector:
    app: hello-express
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
