service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-express-clusterip
  labels:
    app: hello-express
spec:
  type: ClusterIP
  selector:
    app: hello-express
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hello-express-nodeport
  labels:
    app: hello-express
spec:
  type: NodePort
  selector:
    app: hello-express
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
