ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-express-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hello-app.info
    http:
      paths:
      - path: /app(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: hello-express-clusterip
            port:
              number: 80
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: hello-express-nodeport
            port:
              number: 80
  - host: api.hello-app.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-express-nodeport
            port:
              number: 80
